# vigor-klee

./: build.sh
composition_outputs/: fw_nopdrop.gv  fw_nopfwd.gv  nopdrop_fw.gv  nopfwd_fw.gv
include/klee/: Constraints.h
tools/: CMakeLists.txt
tools/analyse-libvig-call-paths/: CMakeLists.txt  analyse-libvig-call-paths.cpp
tools/bdd-conflict-detect/: CMakeLists.txt  bdd-conflict-detect.h  main.cpp  solver-toolbox.cpp  solver-toolbox.h
tools/bdd-conflict-detect/bdd/: bdd.cpp  bdd.h  call-paths-groups.cpp  path-explorer.cpp  path-explorer.h  symbol-factory.cpp  symbol-factory.h  visitor.cpp  visitor.h
tools/bdd-conflict-detect/bdd/nodes/: branch.cpp  branch.h  call.cpp  call.h  node.cpp  node.h  return_init.cpp  return_init.h  return_process.cpp  return_process.h  return_raw.cpp  return_raw.h  symbol.h
tools/bdd-conflict-detect/bdd/visitors/: graphviz-generator.h  open_graph.sh
tools/bdd-reorderer/: CMakeLists.txt  bdd-reorderer.cpp  bdd-reorderer.h  main.cpp
tools/bdd-to-c/: CMakeLists.txt  ast.cpp  ast.h  bdd-to-c.cpp  klee_transpiler.cpp  klee_transpiler.h  nodes.cpp  nodes.h
tools/call-path-hit-rate-graphviz-generator/: CMakeLists.txt  call-path-hit-rate-graphviz-generator.h  main.cpp
tools/call-paths-to-bdd/: CMakeLists.txt  bdd-io.cpp  bdd-nodes.cpp  bdd-nodes.h  bdd.cpp  bdd.h  call-paths-to-bdd.cpp  call-paths-to-bdd.h  graphviz-generator.h  main.cpp  printer-debug.h  solver-toolbox.cpp  solver_toolbox.h  symbol-factory.h  visitor.cpp  visitor.h
tools/call-paths-to-bdd/bdd/: bdd-io.cpp  bdd.cpp  bdd.h  call-paths-groups.h  symbol-factory.cpp  visitor.h
tools/call-paths-to-bdd/bdd/nodes/: branch.cpp  node.cpp  node.h  return_init.cpp  return_init.h  return_process.cpp  return_process.h
tools/call-paths-to-bdd/bdd/visitors/: graphviz-generator.h  open_graph.sh  printer-debug.h
tools/expr-printer/: CMakeLists.txt  expr-printer.cpp  main.cpp
tools/klee/: main.cpp
tools/klee-expr-test/: CMakeLists.txt  klee-expr-test.cpp
tools/libvig-call-paths-to-C-code/: CMakeLists.txt  ast.cpp  ast.h  klee_transpiler.cpp  klee_transpiler.h  libvig-call-paths-to-C-code.cpp  misc.cpp  misc.h  nodes.cpp  nodes.h
tools/load-call-paths/: CMakeLists.txt  load-call-paths.cpp  load-call-paths.h  main.cpp
tools/nf-combination/: CMakeLists.txt  nf-combination.cpp
tools/nf-combination/configs/: bdd1.json  default_config.json  generate_configs.html
tools/packet-modification-detector/: CMakeLists.txt  packet-modification-detector.cpp
tools/printer/: printer.cpp  printer.h
tools/synapse/: CMakeLists.txt  code_generator.cpp  code_generator.h  execution_plan.h  heuristic.h  log.cpp  log.h  search.h  search_space.h  synapse.cpp
tools/synapse/execution_plan/: context.cpp  context.h  execution_plan.cpp  execution_plan.h  execution_plan_node.h  memory_bank.cpp  memory_bank.h
tools/synapse/execution_plan/visitors/: BMv2SimpleSwitchgRPC_generator.cpp  BMv2SimpleSwitchgRPC_generator.h  graphviz.h  open_graph.sh  p4BMv2SimpleSwitchgRPC_generator.cpp  p4BMv2SimpleSwitchgRPC_generator.h  visitor.cpp  visitor.h  x86_generator.cpp  x86_generator.h
tools/synapse/execution_plan/visitors/BMv2SimpleSwitchgRPC_generator/: BMv2SimpleSwitchgRPC_generator.cpp  BMv2SimpleSwitchgRPC_generator.h  keys_from_klee_expr.cpp  keys_from_klee_expr.h  klee_expr_to_p4.cpp  klee_expr_to_p4.h
tools/synapse/execution_plan/visitors/target_code_generators/: target_code_generator.h  target_code_generators.h
tools/synapse/execution_plan/visitors/target_code_generators/BMv2SimpleSwitchgRPC/: BMv2SimpleSwitchgRPC_generator.cpp  BMv2SimpleSwitchgRPC_generator.h  boilerplate.p4  klee_expr_to_p4.cpp  klee_expr_to_p4.h
tools/synapse/execution_plan/visitors/target_code_generators/x86/: boilerplate.c  x86_generator.cpp  x86_generator.h
tools/synapse/heuristics/: biggest.h  dfs.h  heuristic.h  heuristics.h  least_reordered.h  maximize_switch_nodes.h  most_compact.h  score.cpp  score.h
tools/synapse/modules/: module.cpp  module.h  modules.h
tools/synapse/modules/BMv2SimpleSwitchgRPC/: BMv2SimpleSwitchgRPC.h  drop.h  else.h  ethernet_consume.h  ethernet_modify.h  forward.h  if.h  ignore.h  ip_options_consume.h  ip_options_modify.h  ipv4_consume.h  ipv4_modify.h  send_to_controller.h  setup_expiration_notifications.h  table_lookup.h  table_match.h  table_miss.h  tcpudp_consume.h  tcpudp_modify.h  then.h  vector_return.h
tools/synapse/modules/bmv2/: bmv2.h  send_to_controller.h
tools/synapse/modules/fpga/: fpga.h
tools/synapse/modules/netronome/: netronome.h
tools/synapse/modules/p4BMv2SimpleSwitchgRPC/: current_time copy.h  current_time.h  else.h  ethernet_consume.h  if.h  ignore.h  ipv4_consume.h  p4BMv2SimpleSwitchgRPC.h  parser_consume.h  send_to_controller.h  setup_expiration_notifications.h  table_lookup.h  table_match.h  table_miss.h  then.h
tools/synapse/modules/tofino/: a.h  b.h  cached_table_lookup.h  drop.h  else.h  ethernet_consume.h  ethernet_modify.h  forward.h  if.h  ignore.h  ip_options_consume.h  ip_options_modify.h  ipv4_consume.h  ipv4_modify.h  port_allocator_allocate.h  setup_expiration_notifications.h  table_lookup.h  tcpudp_consume.h  tcpudp_modify.h  then.h  tofino.h  update_ipv4_tcpudp_checksum.h
tools/synapse/modules/x86/: broadcast.h  current_time.h  dchain_allocate_new_index.h  dchain_is_index_allocated.h  dchain_rejuvenate_index.h  drop.h  else.h  expire_items_single_map.h  forward.h  if.h  if_then.h  map_get.h  map_put.h  nf_set_rte_ipv4_udptcp_checksum.h  packet_borrow_next_chunk.h  packet_get_metadata.h  packet_get_unread_length.h  packet_return_chunk.h  rte_ether_addr_hash.h  then.h  vector_borrow.h  vector_return.h  x86.h
